force-app/main/default/objects/PopcornFeature__c/PopcornFeature__c.object-meta.xml
<CustomObject>
    <label>Feature</label>
    <nameField>
        <label>Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>