force-app/main/default/objects/PopcornFeature__c/fields/FeatureRef__c.field-meta.xml
<CustomField>
    <fullName>FeatureRef__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Feature Ref</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>