force-app/main/default/objects/PopcornFeature__c/fields/file__c.field-meta.xml
<CustomField>
    <fullName>file__c</fullName>
    <label>file</label>
    <length>255</length>
    <type>Text</type>
</CustomField>