force-app/main/default/objects/PopcornFeature__c/fields/line__c.field-meta.xml
<CustomField>
    <fullName>line__c</fullName>
    <label>line</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>