force-app/main/default/objects/PopcornFeature__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>FullName__c</columns>
    <columns>file__c</columns>
    <columns>line__c</columns>

    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>